--- a/Style/style.css
+++ b/Style/style.css
@@ -132,6 +132,9 @@ body {
     margin: 40px 0px;
     animation: fadeInLeft 0.9s ease-in-out forwards;
 }
+.dropdown-menu{
+    display: none;
+}
 
 .buttons {
     margin-top: 20px;
@@ -711,7 +714,7 @@ body {
     background-color: black;
 }
 
-.menu-bar{
+.toggle-btn{
     position: absolute;
     top: 30px;
     right: 30px;
@@ -818,7 +821,7 @@ hr {
         overflow-x: hidden;
     }
 
-    .menu-bar{
+    .toggle-btn{
         display: block;
     }
     .navbar{
@@ -837,6 +840,52 @@ hr {
         margin-top: -105%;
         transition: all 0.5s ease;
     }
+    .dropdown-menu{
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10;
+        position: absolute;
+        right: 2rem;
+        top: 60px;
+        width: 200px;
+        background-color: rgba(255, 255, 255, 5);
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+        transform: translateY(-10px);
+        transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s ease;
+    }
+    .dropdown-menu li{
+        padding: 0.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .dropdown_menu .button2{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    } 
+
+    .dropdown-menu li a{
+        margin:  0 auto;
+        justify-content: center;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .dropdown-menu.open {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+        height: 320px;
+        border-radius: 20px;
+        box-shadow: 2px 5px 5px rgb(134, 134, 134);
+    }
+    
     .auth-buttons {
         position: absolute;
         top: 65%;
@@ -1190,6 +1239,9 @@ hr {
         display: grid;
         text-align: center;
     }
+    .dropdown-menu{
+        display: block;
+    }
 }
 
 @media (min-width: 400px) and (max-width: 650px){
@@ -1197,7 +1249,7 @@ hr {
         overflow-x: hidden;
     }
 
-    .menu-bar{
+    .toggle-btn{
         display: block;
     }
     .navbar{
@@ -1214,6 +1266,62 @@ hr {
         height: 70vh;
         justify-content: center;
         margin-top: -105%;
+        transition: all 0.5s ease;
+    }
+    .dropdown-menu{
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10;
+        position: absolute;
+        right: 2rem;
+        top: 60px;
+        width: 200px;
+        background-color: rgba(255, 255, 255, 5);
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+        transform: translateY(-10px);
+        transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s ease;
+    }
+    .dropdown-menu li{
+        padding: 0.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .dropdown_menu .button2{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    } 
+
+    .dropdown-menu li a{
+        margin:  0 auto;
+        justify-content: center;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .dropdown-menu.open {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+        height: 320px;
+        border-radius: 20px;
+        box-shadow: 2px 5px 5px rgb(134, 134, 134);
+    }
+    .auth-buttonbuttons {
+        display: none;
+        position: absolute;
+        top: 65%;
+        left: 51%;
+        transform: translate(-50%, -50%);
+        flex-direction: column;
+        align-items: center;
+        margin-top: -170%;
         transition: all 0.5s ease;
     }
     .auth-buttons {
@@ -1498,6 +1606,9 @@ hr {
         display: grid;
         text-align: center;
     }
+    .dropdown-menu{
+        display: block;
+    }
 }
 
 @media (min-width: 650px) and (max-width: 1000px){
@@ -1507,6 +1618,7 @@ hr {
 
     .menu-bar{
         display: block;
+        
     }
     .navbar{
         padding: 0;
@@ -1516,6 +1628,9 @@ hr {
         top: 30px;
         left: 30px;
     }
+    .toggle-btn{
+        display: block;
+    }
     .nav-links{
         flex-direction: column;
         width: 100%;
@@ -1523,6 +1638,51 @@ hr {
         justify-content: center;
         margin-top: -105%;
         transition: all 0.5s ease;
+    }
+    .dropdown-menu{
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10;
+        position: absolute;
+        right: 2rem;
+        top: 60px;
+        width: 200px;
+        background-color: rgba(255, 255, 255, 5);
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+        transform: translateY(-10px);
+        transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s ease;
+    }
+    .dropdown-menu li{
+        padding: 0.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .dropdown_menu .button2{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    } 
+
+    .dropdown-menu li a{
+        margin:  0 auto;
+        justify-content: center;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .dropdown-menu.open {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+        height: 320px;
+        border-radius: 20px;
+        box-shadow: 2px 5px 5px rgb(134, 134, 134);
     }
     .auth-buttons {
         position: absolute;
@@ -1834,6 +1994,31 @@ hr {
 
     .footer-links {
         justify-content: center;
+    }
+
+    .dropdown-menu{
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+    .dropdown-menu li a{
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+    .auth-buttonbuttons {
+        display: none;
+        position: absolute;
+        top: 65%;
+        left: 51%;
+        transform: translate(-50%, -50%);
+        flex-direction: column;
+        align-items: center;
+        margin-top: -170%;
+        transition: all 0.5s ease;
+    }
+    .dropdown-menu {
+        display: block;
     }
 }
 
