--- a/Style/style.css
+++ b/Style/style.css
@@ -833,6 +833,7 @@ hr {
         left: 30px;
     }
     .nav-links{
+        display: none;
         flex-direction: column;
         width: 100%;
         height: 70vh;
@@ -1261,6 +1262,7 @@ hr {
         left: 30px;
     }
     .nav-links{
+        display: none;
         flex-direction: column;
         width: 100%;
         height: 70vh;
@@ -1632,6 +1634,7 @@ hr {
         display: block;
     }
     .nav-links{
+        display: none;
         flex-direction: column;
         width: 100%;
         height: 70vh;
