--- a/Style/style.css
+++ b/Style/style.css
@@ -884,7 +884,7 @@ hr {
         visibility: visible;
         height: 320px;
         border-radius: 20px;
-        box-shadow: 2px 5px 5px rgb(134, 134, 134);
+        border: 1px solid black;
     }
     
     .auth-buttons {
@@ -1313,7 +1313,7 @@ hr {
         visibility: visible;
         height: 320px;
         border-radius: 20px;
-        box-shadow: 2px 5px 5px rgb(134, 134, 134);
+        border: 1px solid black;
     }
     .auth-buttonbuttons {
         display: none;
@@ -1685,7 +1685,7 @@ hr {
         visibility: visible;
         height: 320px;
         border-radius: 20px;
-        box-shadow: 2px 5px 5px rgb(134, 134, 134);
+        border: 1px solid black;
     }
     .auth-buttons {
         position: absolute;
