--- a/Style/login.css
+++ b/Style/login.css
@@ -1,3 +1,23 @@
+@font-face 
+{
+  font-family: 'Poppins-Light';
+  src: url('../Font/Poppins-Light.ttf');
+}
+@font-face 
+{
+  font-family: 'Poppins';
+  src: url('../Font/Poppins-Regular.ttf');
+}
+@font-face 
+{
+  font-family: 'Poppins-Medium';
+  src: url('../Font/Poppins-Medium.ttf');
+}
+
+* {
+    font-family: 'Poppins';
+}
+
 body {
     background-color: #f3f4f6;
     display: flex;
@@ -37,6 +57,7 @@ body {
 }
 
 .title {
+    font-family: 'Poppins-Medium';
     font-size: 35px;
     font-weight: bold;
     color: black;
