--- a/Style/konsumsi.css
+++ b/Style/konsumsi.css
@@ -1,3 +1,183 @@
+@font-face 
+{
+  font-family: 'Poppins-Light';
+  src: url('../Font/Poppins-Light.ttf');
+}
+@font-face 
+{
+  font-family: 'Poppins';
+  src: url('../Font/Poppins-Regular.ttf');
+}
+@font-face 
+{
+  font-family: 'Poppins-Medium';
+  src: url('../Font/Poppins-Medium.ttf');
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins';
+}
+
+body {
+    background-color: #f8f9fa;
+    overflow-x: hidden;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 110px 0 110px;
+}
+
+.logo {
+    width: 31px;
+    height: 50px;
+    background-image: url(../Images/logo.svg);
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+}
+
+.nav-links li {
+    margin: 0 15px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+    padding: 0 3px;
+}
+
+.toggle-btn {
+    display: none;
+}
+
+.btn-masuk {
+    color: #30B0C7;
+    border: 1px solid #30B0C7;
+    background-color: transparent;
+    font-size: 15px;
+    padding: 10px 22px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    transition: all 0.2s ease-in-out;
+}
+
+.btn-masuk:hover {
+    color: white;
+    background-color: #30B0C7;
+}
+
+.btn-daftar {
+    color: white;
+    background-color: #30B0C7;
+    font-size: 15px;
+    padding: 10px 22px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    outline: none;
+    transition: all 0.2s ease-in-out;
+}
+
+.btn-daftar:hover {
+    background-color: #2480aa;
+}
+
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 110px;
+    background: url('../Images/background-hero.svg') no-repeat center;
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    background-color: #f0f9fa;
+}
+
+.hero-content {
+    width: 70%;
+    height: 100%;
+    margin-top: 21rem;
+}
+
+.hero-content h2 {
+    text-align: center;
+    font-family: 'Poppins-Medium';
+    font-stretch: extra-expanded;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    color: #30B0C7;
+    line-height: 70px;
+    animation: fadeInUp 0.7s ease-in-out forwards;
+}
+
+.hero-content h1 {
+    text-align: center;
+    font-family: 'Poppins-Medium';
+    font-stretch: extra-expanded;
+    font-size: 60px;
+    letter-spacing: 0.5px;
+    font-weight: bold;
+    color: #000;
+    line-height: 70px;
+    animation: fadeInUp 0.8s ease-in-out forwards;
+}
+
+.hero-content p {
+    font-family: 'Poppins-Light';
+    text-align: center;
+    font-size: 15px;
+    color: #1f1f1f;
+    margin-top: 10px;
+    line-height: 1.7;
+    margin: 40px 0px;
+    animation: fadeInUp 1s ease-in-out forwards;
+}
+.dropdown-menu{
+    display: none;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.primary-btn {
+    background-color: #30B0C7;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-right: 20px;
+    position: relative;
+    box-shadow: 4px 4px 0px black;
+    transition: all 0.2s ease-in-out;
+    animation: fadeInUp 1.1s ease-in-out forwards;
+}
+
+.primary-btn:hover {
+    background-color: #2480aa;
+    box-shadow: none;
+}
+
 .judul-konsumsi{
     text-align: left;
     width: 65%;
@@ -7,6 +187,9 @@
     transform: scale(1.1);
 }
 
+.sayur {
+    margin-top: -3rem;
+}
 .judul-sayuran{
     margin-left: 95px;
     display: flex;
@@ -286,8 +469,443 @@
     min-height: 100vh; 
 }
 
+.footer {
+    width: 100%;
+    height: 20px;
+    align-items: center;
+    padding: 0px 110px;   
+    margin-top: 10rem;
+    background-color: black;
+}
+
+.toggle-btn{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+footer {
+    width: 100%;
+    background-color: #30B0C7;
+    margin-top: 10rem;
+}
+
+.container-footer {
+    padding: 32px 110px 32px 110px;
+}
+
+.footer-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.logo-footer {
+    width: 31px;
+    height: 50px;
+    background-image: url(../Images/logo-putih.svg);
+}
+
+.desk-footer {
+    font-family: 'Poppins-Light';
+    max-width: 448px;
+    margin: 0 auto;
+    margin-top: 15px;
+    color: white;
+    font-size: 15px;
+}
+
+.button-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 22px;
+}
+
+.button {
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    padding: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+    border: 1px solid white;
+    border-radius: 6px;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.button:hover {
+    background-color: white;
+    color: #30B0C7;
+}
+
+hr {
+    margin: 40px 0;
+    border: 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    color: white;
+    font-size: 14px;
+}
+
+.footer-links {
+    display: flex;
+    gap: 15px;
+}
+
+.footer-links a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+    transition: 0.3s;
+}
+
+.footer-links a:hover {
+   opacity: 0.8;
+}
 
 
+@media (max-width: 400px){
+    body{
+        overflow-x: hidden;
+    }
+
+    .toggle-btn{
+        display: block;
+    }
+    .navbar{
+        padding: 0;
+    }
+    .logo{
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
+    .nav-links{
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        height: 70vh;
+        justify-content: center;
+        margin-top: -105%;
+        transition: all 0.5s ease;
+    }
+    .dropdown-menu{
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10;
+        position: absolute;
+        right: 2rem;
+        top: 60px;
+        width: 200px;
+        background-color: rgba(255, 255, 255, 5);
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+        transform: translateY(-10px);
+        transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s ease;
+    }
+    .dropdown-menu li{
+        padding: 0.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .dropdown_menu .button2{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    } 
+
+    .dropdown-menu li a{
+        margin:  0 auto;
+        justify-content: center;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .dropdown-menu.open {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+        height: 320px;
+        border-radius: 20px;
+        border: 1px solid black;
+    }
+    
+    .auth-buttons {
+        position: absolute;
+        top: 65%;
+        left: 51%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: -170%;
+        transition: all 0.5s ease;
+    }
+    
+    .mobile-menu{
+        margin-top: 0;
+    }
+
+    .nav-links li{
+        margin: 30px auto;
+    }
+
+    .dropdown-menu{
+        display: block;
+    }
+}
+@media (min-width: 400px) and (max-width: 650px){
+    body{
+        overflow-x: hidden;
+    }
+
+    .toggle-btn{
+        display: block;
+    }
+    .navbar{
+        padding: 0;
+    }
+    .logo{
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
+    .nav-links{
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        height: 70vh;
+        justify-content: center;
+        margin-top: -105%;
+        transition: all 0.5s ease;
+    }
+    .dropdown-menu{
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10;
+        position: absolute;
+        right: 2rem;
+        top: 60px;
+        width: 200px;
+        background-color: rgba(255, 255, 255, 5);
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+        transform: translateY(-10px);
+        transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s ease;
+    }
+    .dropdown-menu li{
+        padding: 0.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .dropdown_menu .button2{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    } 
+
+    .dropdown-menu li a{
+        margin:  0 auto;
+        justify-content: center;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .dropdown-menu.open {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+        height: 320px;
+        border-radius: 20px;
+        border: 1px solid black;
+    }
+    .auth-buttonbuttons {
+        display: none;
+        position: absolute;
+        top: 65%;
+        left: 51%;
+        transform: translate(-50%, -50%);
+        flex-direction: column;
+        align-items: center;
+        margin-top: -170%;
+        transition: all 0.5s ease;
+    }
+    .auth-buttons {
+        position: absolute;
+        top: 65%;
+        left: 51%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: -170%;
+        transition: all 0.5s ease;
+    }
+    
+    .mobile-menu{
+        margin-top: 0;
+    }
+
+    .nav-links li{
+        margin: 30px auto;
+    }
+
+    .dropdown-menu{
+        display: block;
+    }
+}
+@media (min-width: 650px) and (max-width: 1000px){
+    body{
+        overflow-x: hidden;
+    }
+
+    .menu-bar{
+        display: block;
+        
+    }
+    .navbar{
+        padding: 0;
+    }
+    .logo{
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
+    .toggle-btn{
+        display: block;
+    }
+    .nav-links{
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        height: 70vh;
+        justify-content: center;
+        margin-top: -105%;
+        transition: all 0.5s ease;
+    }
+    .dropdown-menu{
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10;
+        position: absolute;
+        right: 2rem;
+        top: 60px;
+        width: 200px;
+        background-color: rgba(255, 255, 255, 5);
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+        transform: translateY(-10px);
+        transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s ease;
+    }
+    .dropdown-menu li{
+        padding: 0.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .dropdown_menu .button2{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    } 
+
+    .dropdown-menu li a{
+        margin:  0 auto;
+        justify-content: center;
+        text-align: center;
+        list-style: none;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .dropdown-menu.open {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+        height: 320px;
+        border-radius: 20px;
+        border: 1px solid black;
+    }
+    .auth-buttons {
+        position: absolute;
+        top: 65%;
+        left: 51%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: -170%;
+        transition: all 0.5s ease;
+    }
+    
+    .mobile-menu{
+        margin-top: 0;
+    }
+
+    .nav-links li{
+        margin: 30px auto;
+    }
+
+    .hero-content{
+        width: 90%;
+    }
+
+    .hero-content h1 {
+        font-size: 50px;
+        line-height: 1.3;
+    }
+
+    .hero-content p {
+        font-size: 14px;
+    }
+}
+@media (min-width: 1000px) and (max-width: 1300px){
+    body{
+        overflow-x: hidden;
+    }
+
+    .hero {
+        margin-top: -4rem;
+    }
+
+    .hero-content {
+        width: 80%;
+    }
+
+    .hero-content h1 {
+        font-size: 55px;
+    }
+    .hero-content p {
+        font-size: 14.5px;
+    }
+}
 
 .Buah{
     margin-top: 50px;
