--- a/Style/penyakit.css
+++ b/Style/penyakit.css
@@ -34,8 +34,9 @@ body {
 }
 
 .logo {
-    font-size: 25px;
-    font-family: 'Poppins-Medium';
+    width: 31px;
+    height: 50px;
+    background-image: url(../Images/logo.svg);
 }
 
 .nav-links {
@@ -52,6 +53,10 @@ body {
     color: black;
     font-size: 15px;
     padding: 0 3px;
+}
+
+.toggle-btn {
+    display: none;
 }
 
 .btn-masuk {
@@ -99,10 +104,11 @@ body {
     background-size: cover;
     height: 100vh;
     width: 100vw;
+    background-color: #f0f9fa;
 }
 
 .hero-content {
-    max-width: 50%;
+    width: 70%;
     height: 100%;
     margin-top: 21rem;
 }
@@ -111,12 +117,12 @@ body {
     text-align: center;
     font-family: 'Poppins-Medium';
     font-stretch: extra-expanded;
-    font-size: 18px;
+    font-size: 15px;
     letter-spacing: 0.5px;
     font-weight: 400;
     color: #30B0C7;
     line-height: 70px;
-    animation: fadeInLeft 0.7s ease-in-out forwards;
+    animation: fadeInUp 0.7s ease-in-out forwards;
 }
 
 .hero-content h1 {
@@ -128,18 +134,18 @@ body {
     font-weight: bold;
     color: #000;
     line-height: 70px;
-    animation: fadeInLeft 0.7s ease-in-out forwards;
+    animation: fadeInUp 0.8s ease-in-out forwards;
 }
 
 .hero-content p {
     font-family: 'Poppins-Light';
     text-align: center;
     font-size: 15px;
-    color: #444;
+    color: #1f1f1f;
     margin-top: 10px;
     line-height: 1.7;
     margin: 40px 0px;
-    animation: fadeInLeft 0.9s ease-in-out forwards;
+    animation: fadeInUp 1s ease-in-out forwards;
 }
 .dropdown-menu{
     display: none;
@@ -164,7 +170,7 @@ body {
     position: relative;
     box-shadow: 4px 4px 0px black;
     transition: all 0.2s ease-in-out;
-    animation: fadeInLeft 1.2s ease-in-out forwards;
+    animation: fadeInUp 1.1s ease-in-out forwards;
 }
 
 .primary-btn:hover {
@@ -172,71 +178,12 @@ body {
     box-shadow: none;
 }
 
-
-.secondary-btn {
-    background-color: transparent;
-    border: 2px solid #30B0C7;
-    color: #30B0C7;
-    padding: 10px 18px;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    animation: fadeInLeft 1.4s ease-in-out forwards;
-}
-
-.secondary-btn:hover {
-    background-color: #30B0C7;
-    color: white;
-}
-
-.hero-image img {
-    max-width: 110%;
-    background-image: no-repeat center;
-    background-size: contain;
-    margin-top: -8rem;
-    animation: fadeInRight 1s ease-in-out forwards;
-}
-
-.brand-logos {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: -6rem;
-    flex-wrap: wrap;
-    animation: fadeInUp linear;
-    transition: 0.3s ease-in-out;
-    animation-timeline: view();
-    animation-range: entry 0% cover 20%;
-}
-
-.logo-container {
-    display: flex;
-    align-items: center;
-    gap: 120px;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-.logo-container img {
-    height: 40px;
-    filter: grayscale(100%);
-    opacity: 0.5;
-    transition: all 0.3s ease-in-out;
-}
-
-.logo-container img:hover {
-    opacity: 1;
-    filter: grayscale(0%);
-}
-
 .penyakit {
     width: 100%;
     position: relative;
     align-items: center;
     padding: 100px 110px;
-    background-color: #dcfaffbd;
+    margin-top: -10rem;
     z-index: 0;
 }
 
@@ -285,7 +232,7 @@ body {
 }
 
 .card1 {
-    width: 90%;
+    width: 120%;
     float: inline-end;
     padding: 35px 30px;
     background: white;
@@ -332,7 +279,7 @@ body {
 }
 
 .card_highlight1 {
-    width: 110%;
+    width: 80%;
     border: 1px solid black;
     background-image: url('../Images/penyakit1.svg');
     background-position: center;
@@ -430,7 +377,7 @@ body {
 }
 
 .card2 {
-    width: 90%;
+    width: 120%;
     float: inline-end;
     padding: 35px 30px;
     background: white;
@@ -477,7 +424,7 @@ body {
 }
 
 .card_highlight2 {
-    width: 110%;
+    width: 80%;
     border: 1px solid black;
     background-image: url('../Images/penyakit2.svg');
     background-position: center;
@@ -575,7 +522,7 @@ body {
 }
 
 .card3 {
-    width: 90%;
+    width: 120%;
     float: inline-end;
     padding: 35px 30px;
     background: white;
@@ -622,7 +569,7 @@ body {
 }
 
 .card_highlight3 {
-    width: 110%;
+    width: 80%;
     border: 1px solid black;
     background-image: url('../Images/penyakit3.svg');
     background-position: center;
@@ -712,6 +659,67 @@ body {
 }
 /* Penyakit 3 Popup end*/
 
+.qna {
+    width: 100vw;
+    padding: 0px 110px;
+    margin-top: -5rem;
+}
+
+.container-5 {
+    width: 100%;
+    margin: 180px auto;
+    background-color: #30B0C7;
+    border: 2px solid #2480aa;
+    border-radius: 15px;
+    padding: 70px 180px;
+}
+.title {
+    font-family: 'Poppins-Medium';
+    text-align: center;
+    color: white;
+    font-size: 40px;
+    margin-bottom: 35px;
+    animation: fadeInUp linear;
+    transition: 0.3s ease-in-out;
+    animation-timeline: view();
+    animation-range: entry 0% cover 20%;
+}
+.tab {
+    margin-bottom: 10px;
+    border-bottom: 1px solid white;
+    animation: fadeInUp linear;
+    transition: 0.3s ease-in-out;
+    animation-timeline: view();
+    animation-range: entry 0% cover 20%;
+}
+.tab input {
+    display: none;
+}
+.tab label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.tab h3 {
+    margin: 0;
+    color: white;
+    font-size: 16px;
+}
+.content-pertanyaan {
+    font-family: 'Poppins-Light';
+    display: none;
+    padding-left: 15px;
+    color: white;
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+.tab input:checked + label + .content-pertanyaan {
+    display: block;
+}
 
 .footer {
     width: 100%;
@@ -749,9 +757,9 @@ footer {
 }
 
 .logo-footer {
-    color: white;
-    font-size: 25px;
-    font-family: 'Poppins-Medium';
+    width: 31px;
+    height: 50px;
+    background-image: url(../Images/logo.svg);
 }
 
 .desk-footer {
