--- a/Style/style.css
+++ b/Style/style.css
@@ -34,8 +34,9 @@ body {
 }
 
 .logo {
-    font-size: 25px;
-    font-family: 'Poppins-Medium';
+    width: 31px;
+    height: 50px;
+    background-image: url(../Images/logo.svg);
 }
 
 .nav-links {
@@ -719,6 +720,76 @@ body {
     box-shadow: none;
 }
 
+.popup {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.popup-content {
+    background: white;
+    padding: 50px 50px 20px 50px;
+    border-radius: 15px;
+    text-align: center;
+    width: 40%;
+    height: 90%;
+    position: relative;
+    max-height: 80vh; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.popup-content h2{
+    font-family: 'Poppins-Medium';
+    font-size: 50px;
+    background: white;
+    margin-top: 50px;
+    text-align: center;
+}
+.popup-content p{
+    background: white;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.popup_highlight1{
+    background: white;
+    height: 350px;
+    border: 1px solid;
+    border-color: black;
+    width: 100%;
+    border: 1px solid black;
+    background-image: url('../Images/penyakit1.svg');
+    background-position: center;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+.popup-content::-webkit-scrollbar {
+    width: 0px; 
+    display: none;
+}
+
+.popup-content {
+    scrollbar-width: none;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
 .footer {
     width: 100%;
     height: 20px;
@@ -755,9 +826,9 @@ footer {
 }
 
 .logo-footer {
-    color: white;
-    font-size: 25px;
-    font-family: 'Poppins-Medium';
+    width: 31px;
+    height: 50px;
+    background-image: url(../Images/logo-putih.svg);
 }
 
 .desk-footer {
