--- a/Style/penyakit.css
+++ b/Style/penyakit.css
@@ -759,7 +759,7 @@ footer {
 .logo-footer {
     width: 31px;
     height: 50px;
-    background-image: url(../Images/logo.svg);
+    background-image: url(../Images/logo-putih.svg);
 }
 
 .desk-footer {
