--- a/Style/aktifitas.css
+++ b/Style/aktifitas.css
@@ -502,7 +502,7 @@ footer {
 .logo-footer {
     width: 31px;
     height: 50px;
-    background-image: url(../Images/logo.svg);
+    background-image: url(../Images/logo-putih.svg);
 }
 
 .desk-footer {
