--- a/Style/style.css
+++ b/Style/style.css
@@ -757,17 +757,14 @@ body {
 .popup-content p{
     background: white;
     margin-top: 30px;
-    text-align: center;
+    text-align: justify;
 }
 
 .popup_highlight1{
     background: white;
     height: 350px;
-    border: 1px solid;
-    border-color: black;
     width: 100%;
-    border: 1px solid black;
-    background-image: url('../Images/penyakit1.svg');
+    background-image: url('../Images/makanan.svg');
     background-position: center;
     background-size: cover;
     border-radius: 15px;
@@ -779,6 +776,273 @@ body {
 }
 
 .popup-content {
+    scrollbar-width: none;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.popup2 {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.popup-content2 {
+    background: white;
+    padding: 50px 50px 20px 50px;
+    border-radius: 15px;
+    text-align: center;
+    width: 40%;
+    height: 90%;
+    position: relative;
+    max-height: 80vh; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.popup-content2 h2{
+    font-family: 'Poppins-Medium';
+    font-size: 50px;
+    background: white;
+    margin-top: 50px;
+    text-align: center;
+}
+.popup-content2 p{
+    background: white;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.popup_highlight2{
+    background: white;
+    height: 350px;
+    width: 100%;
+    background-image: url('../Images/penyakit1.svg');
+    background-position: center;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+.popup-content2::-webkit-scrollbar {
+    width: 0px; 
+    display: none;
+}
+
+.popup-content2 {
+    scrollbar-width: none;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.popup3 {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.popup-content3 {
+    background: white;
+    padding: 50px 50px 20px 50px;
+    border-radius: 15px;
+    text-align: center;
+    width: 40%;
+    height: 90%;
+    position: relative;
+    max-height: 80vh; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.popup-content3 h2{
+    font-family: 'Poppins-Medium';
+    font-size: 50px;
+    background: white;
+    margin-top: 50px;
+    text-align: center;
+}
+.popup-content3 p{
+    background: white;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.popup_highlight3{
+    background: white;
+    height: 350px;
+    width: 100%;
+    background-image: url('../Images/penyakit2.svg');
+    background-position: center;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+.popup-content3::-webkit-scrollbar {
+    width: 0px; 
+    display: none;
+}
+
+.popup-content3 {
+    scrollbar-width: none;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.popup4 {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.popup-content4 {
+    background: white;
+    padding: 50px 50px 20px 50px;
+    border-radius: 15px;
+    text-align: center;
+    width: 40%;
+    height: 90%;
+    position: relative;
+    max-height: 80vh; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.popup-content4 h2{
+    font-family: 'Poppins-Medium';
+    font-size: 50px;
+    background: white;
+    margin-top: 50px;
+    text-align: center;
+}
+.popup-content4 p{
+    background: white;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.popup_highlight4{
+    background: white;
+    height: 350px;
+    width: 100%;
+    background-image: url('../Images/penyakit3.svg');
+    background-position: center;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+.popup-content4::-webkit-scrollbar {
+    width: 0px; 
+    display: none;
+}
+
+.popup-content4 {
+    scrollbar-width: none;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.popup5 {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content5 {
+    background: white;
+    padding: 50px 50px 20px 50px;
+    border-radius: 15px;
+    text-align: center;
+    width: 40%;
+    height: 90%;
+    position: relative;
+    max-height: 80vh; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.popup-content5 h2{
+    font-family: 'Poppins-Medium';
+    font-size: 50px;
+    background: white;
+    margin-top: 50px;
+    text-align: center;
+}
+.popup-content5 p{
+    background: white;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.popup_highlight5{
+    background: white;
+    height: 350px;
+    width: 100%;
+    background-image: url('../Images/makanan.svg');
+    background-position: center;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+.popup-content5::-webkit-scrollbar {
+    width: 0px; 
+    display: none;
+}
+
+.popup-content5 {
     scrollbar-width: none;
 }
 
@@ -846,6 +1110,11 @@ footer {
     gap: 10px;
     margin-top: 22px;
 }
+
+.button-container a {
+    text-decoration: none;
+}
+
 
 .button {
     background-color: transparent;
